# zombcharpy

./: README.md  preview.py  pyproject.toml
tests/: test_character.py
zombcharpy/: ambitions.py  character.py
zombcharpy/jobs/: jobs.py  post_apocalypse_jobs.py
